--- a/src/main.css
+++ b/src/main.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+:root {
+  --bg-color: #12071f;
+}
+
+@layer base {
+  body {
+    background-color: var(--bg-color);
+  }
+}
